@@ -169,6 +169,10 @@ Shorewall 4.4.3
     now, if the zone has <interface>:0.0.0.0/0 (even with exclusions),
     then it may have no additional members in /etc/shorewall/hosts.
 
+13) Because the 'track' provider option is so useful, it is now the
+    default. If, for some reason, you don't want 'track' then specify
+    'notrack' for the provider.
+
 ----------------------------------------------------------------------------
           P R O B L E M S   C O R R E C T E D   I N   4 . 4 . 3
 ----------------------------------------------------------------------------
@@ -217,6 +221,10 @@ None.
 
     On non-Debian systems, new installs will now log all Shorewall 
     commands to /var/log/shorewall-init.log.
+
+2)  Because the 'track' provider option is so useful, it is now the
+    default. If, for some reason, you don't want 'track' then specify
+    'notrack' for the provider.
 
 ----------------------------------------------------------------------------
                 N E W   F E A T U R E S   I N   4 . 4 . 0
