@@ -16,6 +16,8 @@ Changes in Shorewall 4.4.3
 
 8)  Remove superfluous variables from generated script
 
+9)  Make 'track' the default.
+
 Changes in Shorewall 4.4.2
 
 1)  BUGFIX: Correct detection of Persistent SNAT support
